Bug 850845 - don't dereference null mCameraHw pointer, r=sotaro